did stuff, but can't remember what...

--- a/src/main/resources/values/strings.properties
+++ b/src/main/resources/values/strings.properties
@@ -1,12 +1,22 @@
 main_window_title=Warehouse Game
-balance_window_title=Balance
-tooltip_scrap_or_reject_order=Reject order or scrap product
-error_title_look_and_feel=Error
-error_message_look_and_feel=Failed to set the look and feel.
-error_title_heavy_stone=Error
-error_message_heavy_stone=Heavy stones can only be stored at the very bottom!
-error_title_medium_weight_stone=Error
-error_message_medium_weight_stone=Medium-weight stones cannot be stored on the top shelf!
+
+tooltip.scrap_or_reject_order=Reject order or scrap product
+tooltip.info=Info
+tooltip.new_order=New Order
+tooltip.balance=Opens the balance window
+
+error.title.look_and_feel=Error
+error.message.look_and_feel=Failed to set the look and feel.
+error.title.heavy_stone=Error
+error.message.heavy_stone=Heavy stones can only be stored at the very bottom!
+error.title.medium_weight_stone=Error
+error.message.medium_weight_stone=Medium-weight stones cannot be stored on the top shelf!
 
 balance=Balance
-balance_window_column_names=Revenue,Action,Product
+balance.window.title=Balance
+balance.window.column_names.revenue=Revenue
+balance.window.column_names.action=Action
+balance.window.column_names.product=Product
+
+info.window.title=Info
+info.window.heading=Tutorial
