added a tutorial window, the copyright notice and made some minor changes

--- a/src/main/resources/values/strings.properties
+++ b/src/main/resources/values/strings.properties
@@ -1,9 +1,20 @@
-main_window_title=Warehouse Game
+#
+# Copyright (c) 2023 Marko Salig.
+#
+# Licensed under the MIT license: https://opensource.org/licenses/MIT
+# Permission is granted to use, copy, modify, and redistribute the work.
+# Full license information available in the project LICENSE file.
+#
+
+main.window.title=WarehouseGame
+
+store=store
+retrieve=retrieve
 
 tooltip.scrap_or_reject_order=Reject order or scrap product
-tooltip.info=Info
-tooltip.new_order=New Order
-tooltip.balance=Opens the balance window
+tooltip.info=Info/Tutorial
+tooltip.new_order=Get a new Order
+tooltip.balance=Open the balance window
 
 error.title.look_and_feel=Error
 error.message.look_and_feel=Failed to set the look and feel.
@@ -17,6 +28,21 @@ balance.window.title=Balance
 balance.window.column_names.revenue=Revenue
 balance.window.column_names.action=Action
 balance.window.column_names.product=Product
+balance.window.overall=Overall
 
-info.window.title=Info
-info.window.heading=Tutorial
+info.window.title=Tutorial
+info.window.finish=Finish
+info.window.slide0.heading=Get a new order
+info.window.slide0.message=<html>To receive a new order, simply click on the plus icon.</html>
+info.window.slide1.heading=Order Type
+info.window.slide1.message=<html>Each new order will be either to store a new product or retrieve one from your storage.</html>
+info.window.slide2.heading=Process the New Order
+info.window.slide2.message=<html>Complete your order by dragging a product into your storage or dragging one from your storage into the truck.</html>
+info.window.slide3.heading=Storage Conditions
+info.window.slide3.message=<html>Keep in mind that heavy stones should be stored at the bottom, while medium-weight stones cannot be placed on the top shelf.</html>
+info.window.slide4.heading=Rejecting an Order
+info.window.slide4.message=<html>To reject an order, drag the product/truck onto the trash can. However, be cautious as rejecting an order will result in a deduction of the product's price from your account.</html>
+info.window.slide5.heading=Scrapping a Product
+info.window.slide5.message=<html>If you require more space in your storage, you can discard a product by dragging it onto the trash can. Scrapping a product will free up storage space, but it comes at a cost of $300.</html>
+info.window.slide6.heading=The Objective
+info.window.slide6.message=<html>Your objective is to maximize your earnings and ascend to the rank of the new Warehouse Grand-Master!</html>
